# minesweeper

./: CMakeLists.txt  resources.qrc
QtMinesweeper/: CMakeLists.txt  resources.qrc
QtMinesweeper/include/: CustomGameDialog.h  HighScore.h
QtMinesweeper/src/: CustomGameDialog.cpp  HighScore.cpp  HighScoreDialog.cpp  MainWindow.cpp  RightClickableButton.cpp  main.cpp
QtMinesweeper/translations/: QtMinesweeper_de.qm  QtMinesweeper_de.ts  QtMinesweeper_en.ts
QtMinesweeper/ui/: CustomGameDialog.ui  HighScoreDialog.ui  MainWindow.ui
include/: HighScore.h  HighScoreDialog.h  MainWindow.h  RightClickableButton.h
src/: CustomGameDialog.cpp  CustomGameDialog.ui  HighScore.cpp  MainWindow.cpp  MainWindow.ui  main.cpp
translations/: QtMinesweeper_de.ts  QtMinesweeper_en.ts
